<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort_title"
        android:title="@string/sort_by_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_artist"
        android:title="@string/sort_by_artist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_duration"
        android:title="@string/sort_by_duration"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_flac"
        android:title="@string/filter_flac"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_all"
        android:title="@string/show_all"
        app:showAsAction="never" />

</menu>
